--- a/bookshop 2/src/main/resources/templates/index.html
+++ b/bookshop 2/src/main/resources/templates/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bootstrap 实例</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>hello</h1>
+
+<div class="col-sm-5 float-right">
+    <button class="btn-primary">login</button>
+    <button class="btn-primary">register</button>
+</div>
+
+<div class="jumbotron text-center">
+    <h1>BOOK SHOP</h1>
+    <p>-Lometsj</p>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <h3 th:text="${title}">第一列</h3>
+            <p>菜鸟教程</p>
+            <p>学的不仅是技术，更是梦想！！！</p>
+        </div>
+        <div class="col-4">
+            <h3>第二列</h3>
+            <p>菜鸟教程..</p>
+            <p>学的不仅是技术，更是梦想！！！</p>
+        </div>
+        <div class="col-4">
+            <h3>第三列</h3>
+            <p>菜鸟教程..</p>
+            <p>学的不仅是技术，更是梦想！！！</p>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
